--- a/yasnateam-ui/css/style.css
+++ b/yasnateam-ui/css/style.css
@@ -345,6 +345,7 @@ a.logo:visited, a.logo:active{
 
 .product-pic{
 	width: 100%;
+	max-height: 400px;
 	padding: 20px 10px;
 	overflow: hidden;
 	position: relative;
