Auto updating data in costumers section
data in costumers section updates automatically while logo slider changes.
active logo is always in center.
active logo has "color" class.
active logo changes on click.

--- a/yasnateam-ui/css/style.css
+++ b/yasnateam-ui/css/style.css
@@ -313,7 +313,7 @@ a.logo:visited, a.logo:active{
 	-o-transition: all .3s cubic-bezier(.694,0,.335,1);
 	transition: all .3s cubic-bezier(.694,0,.335,1);
 }
-.logo-container .logo.selected {
+.logo-container .color .logo {
 	-webkit-filter: grayscale(0%);
 	filter: grayscale(0%);
 }
@@ -328,6 +328,9 @@ a.logo:visited, a.logo:active{
 	object-fit: contain;
 }
 .logo-container .owl-nav, .logo-container .owl-dots{
+	display: none;
+}
+product-data{
 	display: none;
 }
 .product{
