--- a/emad-ui/sass/style.scss
+++ b/emad-ui/sass/style.scss
@@ -190,58 +190,53 @@ main{
       display: table-cell;
       vertical-align: middle;
       .title-big{
-        Font-size: 67px;
-        color: $black;
-        letter-spacing: -5px;
-        @include animation('fade-in 1s linear 1s');
+        color: #333;
+        font-weight:600;
+        letter-spacing: -3px;
+        /*padding:0 10px;*/
       }
     }
   }
 }
 .nav-center{
-  margin:20px 0;
-  @include animation('fade-in 1s linear 1s');
+  margin:-5px 0 25px;
   a{
     font-size: 18px;
     margin: 0 20px;
-    opacity: 0.4;
+    opacity: 0.8;
     &:hover{
       opacity: 1;
       @include transition(opacity .3s cubic-bezier(.694,0,.335,1));
     }
   }
 }
+.title-big, .nav-center{
+  font-size: 28px;
+  opacity:0;
+}
 
 .line-container{
   width: 100%;
   height:2px;
   .load-line{
-    background: $medium-gray;
-    width:100%;
-    height: 2px;
-    @include animation('darwline 1s linear');
-  }
-}
-
-@include keyframes(darwline){
-  from{
+    background: #3c3c3c;
     width:0;
-  }
-  to{
-    width: 100%;
-  }
-}
-@include keyframes(fade-in){
-  from{
-    opacity:0;
-  }
-  to{
-    opacity: 1;
+    height: 2px;
   }
 }
 
 
 
+
+
+
+
+@media(min-width: 1200px){
+  main .inner-container .title-big{
+    Font-size: 85px;
+    font-weight:600;
+  }
+}
 
 @media(min-width: 768px){
   .mobile,.nav-list{
@@ -260,7 +255,18 @@ main{
         margin-top: 0;
       }
     }
+  }
 
+}
+
+@media(min-width: 610px){
+.inner-container .title-big{
+    font-size: 47px;
+  }
+}
+@media(min-width: 375px){
+.title-big{
+    font-size: 33px;
   }
 }
 
