--- a/emad-ui/sass/blog-style.scss
+++ b/emad-ui/sass/blog-style.scss
@@ -32,7 +32,7 @@ $img-size: $footer-height - 20px;
   @extend .list-reset;
   @extend %clearfix;
   .item{
-    float: left;
+    float: right;
     cursor: pointer;
     width:$img-size;
     height: $img-size;
@@ -114,12 +114,17 @@ $img-size: $footer-height - 20px;
   }
 }
 .post-title{
+  color:#888;
+  font-weight: 300;
+  margin:20px 0;
+  font-size: 3em;
+}
+.post-title.bold{
   color:#b1b1b1;
   font-weight: 700;
   margin:20px 0;
-  text-align: center;
   font-size: 3.5em;
-}
+}    /* Test Class @TODO should be removed */
 
 .post figure{
   text-align: center;
