--- a/emad-ui/sass/index-style.scss
+++ b/emad-ui/sass/index-style.scss
@@ -14,9 +14,10 @@ main{
       display: table-cell;
       vertical-align: middle;
       .title-big{
-        color: #333;
-        font-weight:600;
-        letter-spacing: -3px;
+        /*color: #333;*/
+        /*font-weight:600;*/
+        color: #505050;
+        font-weight: 300;
       }
     }
   }
@@ -24,8 +25,10 @@ main{
 .nav-center{
   margin:-5px 0 25px;
   a{
-    font-size: 18px;
-    margin: 0 20px;
+    font-size: 16px;
+    text-transform: capitalize;
+    letter-spacing: 0;
+    margin: 0 5px;
     opacity: 0.8;
     &:hover{
       opacity: 1;
@@ -36,6 +39,7 @@ main{
 .title-big, .nav-center{
   font-size: 28px;
   opacity:0;
+  letter-spacing:-3px;
 }
 
 .line-container{
@@ -65,10 +69,21 @@ main{
 @media(min-width: 610px){
   .inner-container .title-big{
     font-size: 47px;
+    letter-spacing:-3px;
+  }
+  .nav-center a{
+    margin:0 20px;
+    font-size: 18px;
+  }
+}
+@media(min-width: 425px) {
+  .title-big{
+    letter-spacing: 0;
   }
 }
 @media(min-width: 375px){
   .title-big{
     font-size: 33px;
   }
+
 }
