emad-ui spinner and cloud view for years
spinner view for years works
cloud view has a random changing class
*yasna-ui: language page, active class changes on click.

--- a/emad-ui/sass/appendix-style.scss
+++ b/emad-ui/sass/appendix-style.scss
@@ -33,10 +33,10 @@
       float: left;
       opacity: 0.6;
       @include transition(opacity .5s cubic-bezier(.694,0,.335,1));
-      &:hover{
+      /*&:hover{
         opacity: 1;
         @include transition(opacity .5s cubic-bezier(.694,0,.335,1));
-      }
+      }*/
     }
     span{
       color:#444;
@@ -52,48 +52,52 @@
 }
 
 .year.blink{
-  -webkit-transform: scale(1.1,1.1);
-  -moz-transform: scale(1.1,1.1);
-  -ms-transform: scale(1.1,1.1);
-  -o-transform: scale(1.1,1.1);
-  transform: scale(1.1,1.1);
-  @include transition(opacity 1s cubic-bezier(.694,0,.335,1));
   a{
     opacity: 1;
-    @include transition(opacity 1s cubic-bezier(.694,0,.335,1));
+    @include transition(opacity .5s cubic-bezier(.694,0,.335,1));
   }
 }
 
 
 .scroll{
-  width:308px;
+  width:300px;
   height:300px;
   margin:0 auto;
-  border: $gray-narrow-border;
+  /*border: $gray-narrow-border;*/
   overflow: hidden;
   position: relative;
   .years{
     width: 100%;
-    height:100%;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     position: absolute;
+    top:0;
     text-align: left;
+    @extend %clearfix;
     .year{
+      width: 300px;
       margin-right: 0;
       float: left;
-      /*background: #000;*/
+      text-align: center;
       a{
+        transform: scale(.9,.9);
+        width: 100%;
         margin-right: 0;
-
+        @include transition(all .5s cubic-bezier(.694,0,.335,1));
       }
     }
   }
 }
 
+.year.active{
+  a{
+    opacity: 1;
+    transform: scale(1,1) !important;
+    @include transition(all .5s cubic-bezier(.694,0,.335,1));
+  }
+}
 
 
-
-
+/* @TODO Media Query Commented out temporarily*/
 
 @media(min-width: 768px) {
   .appendix{
@@ -101,6 +105,7 @@
   }
 }
 
+/*
 @media(max-width: 991px) {
 
   .years .year{
@@ -119,4 +124,4 @@
     font-size: 26px;
     margin-right:5px;
   }
-}
+}*/
