--- a/payment/sources/sass/_config.scss
+++ b/payment/sources/sass/_config.scss
@@ -53,9 +53,9 @@ $text__line--gamma: 20;
 // $text__line--delta: 20 !default;
 
 // Colours
-$text__colour--base: $color__neutral--dark;
-$text__colour--alpha: $color__primary;
-$text__colour--beta: $color__primary;
+$text__colour--base: $color__white;
+$text__colour--alpha: $color__orange;
+$text__colour--beta: $color__black;
 $text__colour--gamma: $text__colour--base;
 $text__colour--delta: $text__colour--base;
 
