--- a/payment/sources/sass/_base.scss
+++ b/payment/sources/sass/_base.scss
@@ -10,17 +10,15 @@
 $color__white: #FFFFFF;
 $color__black: #000000;
 
-$color__primary--light: #DD0000;
-$color__primary: #C10000;
-$color__primary--dark: #990000;
+$color__orange: #ff7404;
 
-$color__secondary--light: #00DD00;
-$color__secondary: #00C100;
-$color__secondary--dark: #009900;
+$color__blue: #2395d6;
 
-$color__neutral--light: #999999;
-$color__neutral: #666666;
-$color__neutral--dark: #333333;
+$color__blue-gray: #28323e;
+$color__blue-gray--dark: #212a35;
+
+$color__gray--light: #9daeb8;
+$color__gray--dark: #596974;
 
 
 // ## Calculates em size based on required pixel size and context.
