--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -23,5 +23,6 @@
 /////////////////////
 
 @import "modules/reset";
-@import "modules/text";
+@import "modules/typography";
+@import "modules/layout";
 @import "modules/lists";
