--- a/payment/sources/sass/modules/_typography.scss
+++ b/payment/sources/sass/modules/_typography.scss
@@ -6,24 +6,24 @@
 
 $text__family-sans:  IRANSans , sans-serif !default;
 
-$text__size--alpha: 40 !default;
-$text__size--beta: 32 !default;
-$text__size--gamma: 30 !default;
-$text__size--delta: 19 !default;
-$text__size--epsilon: 14 !default;
-$text__size--zeta: 12 !default;
+$text__size--xxl: 40 !default;
+$text__size--xl: 32 !default;
+$text__size--l: 30 !default;
+$text__size--m: 19 !default;
+$text__size--s: 14 !default;
+$text__size--xs: 12 !default;
 
-$text__line--alpha: 44 !default;
-$text__line--beta: 38 !default;
-$text__line--gamma: 36 !default;
-$text__line--delta: 21 !default;
-$text__line--epsilon: 19 !default;
-$text__line--zeta: 16 !default;
+$text__line--xxl: 44 !default;
+$text__line--xl: 38 !default;
+$text__line--l: 36 !default;
+$text__line--m: 28 !default;
+$text__line--s: 19 !default;
+$text__line--xs: 16 !default;
 
-$text__colour--base: #fff !default;
+/*$text__colour--base: #fff !default;
 $text__colour--alpha: #ff7404 !default;
 $text__colour--beta: #2395d6 !default;
-$text__colour--gamma: #3e4956 !default;
+$text__colour--gamma: #3e4956 !default;*/
 
 
 
@@ -34,6 +34,14 @@ $text__colour--gamma: #3e4956 !default;
   margin-bottom: calc-em($margin, $size);
 }
 
+/*
+*-------------------------------------------------------
+* None Styled elements
+*-------------------------------------------------------
+*/
+
+
+
 html {
   font-size: $base__font-size * 1px;
 }
@@ -43,26 +51,36 @@ body {
 }
 
 h1 {
-  @include text($text__size--delta, $text__line--delta, 15);
-  font-weight: bold;
+  @include text($text__size--xxl, $text__line--xxl, 15);
+  font-weight: 300;
   color: $color__orange;
 }
 
 h2 {
-  @include text($text__size--beta, $text__line--beta, 15);
+  @include text($text__size--xl, $text__line--xl, 15);
   color: $color__orange;
 }
 
 h3 {
-  @include text($text__size--gamma, $text__line--gamma, 15);
+  @include text($text__size--l, $text__line--l, 15);
   color: $color__orange;
 }
 
 p {
-  @include text($text__size--delta, $text__line--delta, 10);
+  @include text($text__size--m, $text__line--m, 10);
   color: $color__gray--dark;
 }
 
 a{
-  color: $color__blue;
+  @include text($text__size--m, $text__line--m);
+  &,
+  &:hover,
+  &:active,
+  &:visited,
+  &:focus
+  {
+    color: $color__blue;
+  }
 }
+
+
