--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -25,4 +25,8 @@
 @import "modules/reset";
 @import "modules/typography";
 @import "modules/layout";
+@import "modules/btn";
 @import "modules/lists";
+
+@import "modules/header";
+@import "modules/banner-slider";
