--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -27,6 +27,9 @@
 @import "modules/layout";
 @import "modules/btn";
 @import "modules/lists";
+@import "modules/card";
+@import "modules/calculator";
 
 @import "modules/header";
 @import "modules/banner-slider";
+@import "modules/service-slider";
