--- a/payment/sources/sass/modules/_btn.scss
+++ b/payment/sources/sass/modules/_btn.scss
@@ -26,6 +26,15 @@
       color: $color__orange;
     }
   }
+  &.secondary{
+    background-color: $color__orange;
+    color: $color__white;
+    text-decoration: none;
+    border: 0;
+    &:hover{
+      background-color: $color__orange--light;
+    }
+  }
   &.large{
     width: 230px;
     padding:15px 0 !important;
