--- a/payment/sources/sass/modules/_header.scss
+++ b/payment/sources/sass/modules/_header.scss
@@ -5,6 +5,9 @@
 */
 
 .nav-list{
+  @extend .list-reset;
+  //display: inline-block;
+  display: none;
   .nav-list__item{
     list-style-type: none;
   }
@@ -21,6 +24,31 @@
     }
     &:hover{
       opacity: 1;
+    }
+  }
+}
+
+.btn-list{
+  @extend .list-reset;
+  display: inline-block;
+  li{
+    @media (max-width: 424px) {
+      padding: 0 2px;
+    }
+    a{
+      @include text($text__size--s,$text__line--s);
+      font-weight: 500;
+      opacity: 0.5;
+      &,
+      &:hover,
+      &:active,
+      &:focus,
+      &:visited{
+        color: $color__white;
+      }
+      &:hover{
+        opacity: 1;
+      }
     }
   }
 }
