--- a/payment/sources/sass/modules/_header.scss
+++ b/payment/sources/sass/modules/_header.scss
@@ -6,8 +6,7 @@
 
 .nav-list{
   @extend .list-reset;
-  //display: inline-block;
-  display: none;
+  display: inline-block;
   .nav-list__item{
     list-style-type: none;
   }
@@ -28,9 +27,13 @@
   }
 }
 
+
 .btn-list{
   @extend .list-reset;
   display: inline-block;
+  .nav-list__item--tablet{
+    display: none;
+  }
   li{
     @media (max-width: 424px) {
       padding: 0 2px;
@@ -59,5 +62,33 @@ header {
   }
   a.btn{
     opacity: 1;
+  }
+}
+
+@media(max-width: 768px){
+  .nav-list{
+    display: none;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 100%;
+    border-top: 1px solid rgba(255, 255, 255, 0.18);
+    background: #ff7404;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.05);
+    .nav-list__item{
+      text-align: center;
+      display: block;
+      padding: 7px 0;
+      @include text($text__size--m, $text__line--m);
+      a{
+        opacity: 1;
+      }
+    }
+  }
+
+  .btn-list{
+    .nav-list__item--tablet{
+      display: inline-block;
+    }
   }
 }
