single page created
single page for list view of post is completed

--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -28,8 +28,12 @@
 @import "modules/btn";
 @import "modules/lists";
 @import "modules/card";
-@import "modules/calculator";
+@import "modules/single-heading";
 
 @import "modules/header";
 @import "modules/banner-slider";
+@import "modules/calculator";
 @import "modules/service-slider";
+
+@import "modules/categories-nav";
+@import "modules/snippets";
