--- a/payment/sources/sass/_base.scss
+++ b/payment/sources/sass/_base.scss
@@ -26,6 +26,7 @@ $color__gray--dark: #596974;
 .list-reset{
   margin:0;
   padding: 0;
+  list-style-type: none;
 }
 
 
@@ -38,7 +39,7 @@ $color__gray--dark: #596974;
   @return ($target / $context) * 1em;
 }
 
-// Mixin
+// Clear fix
 @mixin clearfix() {
   &:before,
   &:after {
@@ -48,4 +49,12 @@ $color__gray--dark: #596974;
   &:after {
     clear: both;
   }
+}
+
+// Transition Cross Browser
+@mixin transition($transition...) {
+  -moz-transition:    $transition;
+  -o-transition:      $transition;
+  -webkit-transition: $transition;
+  transition:         $transition;
 }
