--- a/payment/sources/sass/modules/_layout.scss
+++ b/payment/sources/sass/modules/_layout.scss
@@ -92,7 +92,15 @@ body{
     margin: -110px 0 0px;
     padding: 120px 0 0;
     text-align: center;
-    height: 600px;
+    &.banner__header--large{
+      height: 600px;
+    }
+    &.banner__header--medium{
+      height: 400px;
+    }
+    &.banner__header--small{
+      height: 300px;
+    }
   }
 }
 
@@ -117,7 +125,7 @@ body{
       border-right: 20px solid transparent;
       border-bottom: 20px solid $color__blue-gray--dark;
       bottom: 0;
-      left:0;
+      @include transition(all 0.2s);
     }
 
   }
@@ -148,6 +156,7 @@ body{
         .logos-row__item--name{
           color: $color__white;
         }
+        @include transition(all 0.2s);
       }
       .logos-row__item--logo{
         height: 60px;
