sigle page created
single page for articles created

--- a/payment/sources/sass/modules/_typography.scss
+++ b/payment/sources/sass/modules/_typography.scss
@@ -9,7 +9,7 @@ $text__family-sans:  IRANSans , sans-serif !default;
 $text__size--xxl: 40 !default;
 $text__size--xl: 32 !default;
 $text__size--l: 30 !default;
-$text__size--m: 19 !default;
+$text__size--m: 18 !default;
 $text__size--s: 14 !default;
 $text__size--xs: 12 !default;
 
@@ -46,28 +46,29 @@ body {
 }
 
 h1 {
-  @include text($text__size--xxl, $text__line--xxl, 15);
+  @include text($text__size--xxl, $text__line--xxl, 25);
   font-weight: 300;
   color: $color__orange;
 }
 
 h2 {
-  @include text($text__size--xl, $text__line--xl, 15);
+  @include text($text__size--xl, $text__line--xl, 25);
   color: $color__orange;
 }
 
 h3 {
-  @include text($text__size--l, $text__line--l, 15);
-  color: $color__orange;
+  @include text($text__size--l, $text__line--l, 25);
+  color: $color__black
+;
 }
 
 p {
-  @include text($text__size--m, $text__line--m, 10);
+  @include text($text__size--m, $text__line--m, 20);
   color: $color__gray--dark;
 }
 
 a{
-  @include text($text__size--m, $text__line--m);
+  //@include text($text__size--m, $text__line--m);
   &,
   &:hover,
   &:active,
@@ -78,4 +79,13 @@ a{
   }
 }
 
+blockquote {
+  margin-bottom: 12px;
+  padding-right: 15px;
+  border-right: 2px solid $color__orange;
+  font-size: 1.0714285714rem;
+  line-height: 1.7857142857rem;
+  font-style: italic;
+  color: $color__gray--light;
+}
 
