--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -29,6 +29,7 @@
 @import "modules/lists";
 @import "modules/card";
 @import "modules/single-heading";
+@import "modules/_page-navigation";
 
 @import "modules/header";
 @import "modules/banner-slider";
@@ -37,3 +38,5 @@
 
 @import "modules/categories-nav";
 @import "modules/snippets";
+
+@import "modules/_article";
