accordion section created
accordion view for service section on tablet or smaller displays

--- a/payment/sources/sass/modules/_layout.scss
+++ b/payment/sources/sass/modules/_layout.scss
@@ -111,6 +111,10 @@ body{
 */
 
 .services{
+  display: block;
+  @media (max-width: 800px) {
+    display: none;
+  }
   .services-nav{
     padding: 25px 0;
     background: $color__blue-gray;
