--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -35,6 +35,7 @@
 @import "modules/banner-slider";
 @import "modules/calculator";
 @import "modules/service-slider";
+@import "modules/service-accordion";
 
 @import "modules/categories-nav";
 @import "modules/snippets";
