--- a/payment/sources/sass/modules/_calculator.scss
+++ b/payment/sources/sass/modules/_calculator.scss
@@ -35,6 +35,7 @@
           height: 100%;
           width: 10%;
           text-align: center;
+          float: right;
         }
         label{
           @include text($text__size--m,$text__line--m);
