--- a/payment/sources/sass/modules/_service-accordion.scss
+++ b/payment/sources/sass/modules/_service-accordion.scss
@@ -61,6 +61,9 @@
   }
 
   .content-box{
+    .service__card{
+      border: 1px solid $color__blue-gray;
+    }
     a.btn{
       @media (max-width: 991px) {
         width: 100%;
