latest post section created
latest post section containing latest news and latest blogs, has been created.

--- a/payment/sources/sass/screen.scss
+++ b/payment/sources/sass/screen.scss
@@ -36,6 +36,7 @@
 @import "modules/calculator";
 @import "modules/service-slider";
 @import "modules/service-accordion";
+@import "modules/latest-posts";
 
 @import "modules/categories-nav";
 @import "modules/snippets";
