--- a/payment/sources/sass/modules/_input.scss
+++ b/payment/sources/sass/modules/_input.scss
@@ -9,8 +9,6 @@
   width: 100%;
   margin-bottom: 40px;
   input{
-    text-align: left;
-    direction: ltr;
     height: 50px;
     display: block;
     width: 100%;
@@ -34,6 +32,17 @@
       }
 
     }
+  }
+
+ input.english{
+   text-align: left;
+   direction: ltr;
+ }
+
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
   }
 
   // class for filled inputs
@@ -122,4 +131,22 @@
   cursor: pointer;
   -webkit-transition: top .2s ease,padding .2s ease,font-size .2s ease,color .2s ease;
   transition: top .2s ease,padding .2s ease,font-size .2s ease,color .2s ease;
+}
+
+// password strength check customization
+.pwd-container{
+  margin-top: 10px;
+  .progress{
+    height: 10px;
+    margin-bottom: 0;
+    box-shadow: none;
+    background-color: #e2e2e2;
+  }
+  .pw-verdict{
+    @include text($text__size--xs,$text__line--xs);
+    display: inline-block;
+    margin-top: 5px;
+    font-weight: 500;
+    color: $color__blue-gray;
+  }
 }
