--- a/payment/sources/sass/modules/_login.scss
+++ b/payment/sources/sass/modules/_login.scss
@@ -83,7 +83,8 @@ html,body,.wrapper{
 }
 
 //login form styling
-.login-content {
+div[class$="content"] {
+  display: none;
   .form-input {
     input[name=password] {
       padding-left: 40px;
@@ -101,7 +102,7 @@ html,body,.wrapper{
       @include text($text__size--s, $text__line--s);
       border-radius: 3px;
     }
-    &.danger {
+    &.text-danger{
       span {
         color: #c63c32;
       }
@@ -136,4 +137,5 @@ html,body,.wrapper{
       position: static;
     }
   }
+
 }
