particle.js added to background
particles canves added to background

--- a/payment/sources/sass/modules/_login.scss
+++ b/payment/sources/sass/modules/_login.scss
@@ -17,6 +17,16 @@ html,body,.wrapper{
   overflow: auto;
   text-align: center;
   color: $color__blue-gray;
+  position: relative;
+  .bg-particles{
+    width: 100%;
+    //height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    //bottom: 0;
+    right: 0;
+  }
   h1{
     color: $color__white;
     font-weight: 300;
